# clirnet

./: .gitignore  CALCULATORS_BUILT.md  FILE_ORGANIZATION_PLAN.md  IMPLEMENTATION_REPORT.txt  PALLIATIVE_CARE_BUILD_SUMMARY.md  PALLIATIVE_CARE_QUICK_REFERENCE.txt  PR_REVIEW_SUMMARY.md  PSYCHIATRY_CALCULATORS_CREATED.md  backend_tasklist.md  claude.md  diff_stat.txt  flashcat_api_keys_archive.md  to-do-list.md
Dec Tech Review Preparation/: App Improvement Data.csv  Ashu pointers on the main story.txt  November_Tech_Review.md  Pending items from Oct.txt  claude.md  images in generator discussion 1.txt  images in generator discussion 2.txt  medwiki gen stats oct and nov.txt  new SOP for content generation- tamalika.txt  report on automated content 18nov.txt  transcript and MoM of automated content review.md  ui for semantic search across contents.txt
PoC-Repo/: OCTANE_ANALYSIS.md
banner_modfn_procedure/: EXECUTIVE_SUMMARY.md  FREQUENCY_TO_QUERIES_GUIDE.md  NEXT_RUN_TEMPLATE.md  PRE_EXECUTION_CHECKLIST.md  PROCEDURE_SUMMARY.md  QUICK_EXECUTION_REFERENCE.md  README_INDEX.md  automation_design_document.md  (+1 more)
medwiki_facts_extractor/: BATCH_TEST_REPORT.md  IMPLEMENTATION_COMPLETE.md  README.md  TODO.md  batch_processor.py  concurrent_processor.py  extractor.py  idea.md  process_articles.py  pyproject.toml  quick_test.py  run_batch.sh  run_concurrent.py  simple_batch.py  simple_test.py  test_sample.py
medwiki_facts_extractor/output/: checkpoint.json  extracted_data.json  extraction_summary.json  progress.txt
medwiki_facts_extractor/web/: app.js  index.html  style.css
(+444 files in other folders)
